--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -6,7 +6,7 @@
     </div>
     <!--image-->
     <div class="user">
-      <img class="img-circle" src="{{cv.path}}"/>
+      <img class="img-circle" src="assets/images/{{cv.path}}"/>
     </div>
     <div class="content">
       <div class="main">
