--- a/src/app/exercice2/exercice2.component.html
+++ b/src/app/exercice2/exercice2.component.html
@@ -13,7 +13,7 @@
             </div>
             <!--image-->
             <div class="user">
-              <img class="img-circle" src="{{Image}}"/>
+              <img class="img-circle" src="assets/images/{{Image}}"/>
             </div>
             <div class="content">
               <div class="main">
