--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -1,6 +1,6 @@
  <div class="row , align-items-center" *ngIf="cv" (click)="onClick()">
     <div class="col">
-      <img class="img-circle" src="{{cv.path}}"/>
+      <img class="img-circle" src="assets/images/{{cv.path}}"/>
     </div>
     <div class="col">
       {{cv.name}} {{cv.firstname}}
