--- a/src/app/cv/cv.component.html
+++ b/src/app/cv/cv.component.html
@@ -1,4 +1,4 @@
- <div class="card-body">
+ <div class="card-body, container-fluid">
     <div class="row">
       <div class="col">
         <app-liste (showDetailsL_CV)="showDetails($event)"></app-liste>
@@ -9,5 +9,4 @@
     </div>
 
   </div>
-
 
