--- a/src/app/item/item.component.css
+++ b/src/app/item/item.component.css
@@ -2,9 +2,14 @@ div.col{
   padding: 20px;
 
 }
-
+div.row{
+  margin: 5px;
+}
 img {
   width: 100px;
   height: 100px;
   border-radius: 10px;
+}
+.bg_change{
+  background-color:  #aef5f5;
 }
