--- a/src/app/cv/cv.component.html
+++ b/src/app/cv/cv.component.html
@@ -7,6 +7,8 @@
         <app-detail [cv]="selected"></app-detail>
       </div>
     </div>
-
-  </div>
+   <div class="row">
+     <app-embauche></app-embauche>
+</div>
+   </div>
 
