--- a/src/app/TP2/mini-word/mini-word.component.css
+++ b/src/app/TP2/mini-word/mini-word.component.css
@@ -11,3 +11,7 @@
   src: local("BhuTuka"), url(src/assets/fonts/BhuTukaExpandedOne-Regular.ttf) format("truetype");
 }
 
+.borderbold{
+  border: 3px #eaeaea solid;
+}
+
