--- a/src/app/detail/detail.component.html
+++ b/src/app/detail/detail.component.html
@@ -20,7 +20,7 @@
            class="text-center">{{cv.CIN}}</p>
       </div>
       <div style="text-align: center;">
-      <button type="button" class="btn btn-outline-info" (click)="onClick($event)">
+      <button type="button" class="btn btn-outline-info" (click)="onClick()">
         Embaucher
       </button>
       </div>
