--- a/src/app/TP2/mini-word/mini-word.component.html
+++ b/src/app/TP2/mini-word/mini-word.component.html
@@ -18,11 +18,11 @@
 
   </div>
   <br>
-
+<h4> Arc-en-ciel </h4>
   <div class="row">
-  <div class="input-group input-group-sm mb-1">
+  <div class="input-group input-group-sm mb-1 ">
 
-    <input appArcdir class="form-control" aria-label="Arc en ciel text" aria-describedby="inputGroup-sizing-sm">
+    <input appArcdir class="form-control borderbold" aria-label="Arc en ciel text" aria-describedby="inputGroup-sizing-sm">
   </div>
 </div>
 
