--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,10 @@
-<app-cv></app-cv>
+<!--<app-cv></app-cv>-->
+<!--<div class="container">
+  <router-outlet></router-outlet>
+</div>-->
+<div class="container">
+<app-header></app-header>
+<app-router-simulator></app-router-simulator>
+  <router-outlet></router-outlet>
+</div>
+
