--- a/src/app/item/item.component.html
+++ b/src/app/item/item.component.html
@@ -8,5 +8,8 @@
     <div class="col">
       {{cv.name}} {{cv.firstname}}
     </div>
+    <div class="col">
+        <button type="button" class="btn btn-primary" (click)="onClickDetails()">Plus ..</button>
+    </div>
   </div>
 
