--- a/src/app/pere/pere.component.html
+++ b/src/app/pere/pere.component.html
@@ -1,4 +1,4 @@
-<div class="container-max-height" [style.backgroundColor]="bgColor">
+<div class="container-max-auto" [style.backgroundColor]="bgColor">
 
   <app-fils [bgColorPere]="bgColor" (colorChange)="changeBgColor($event)"></app-fils>
 
