--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -22,6 +22,9 @@
           <li class="nav-item">
             <a class="nav-link" [routerLink]="['addUtil']">Ajouter Utilisateur</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['randImg']"> Random Image</a>
+          </li>
       </ul>
     </div>
   </nav>
