--- a/src/app/suite-img/suite-img.component.html
+++ b/src/app/suite-img/suite-img.component.html
@@ -1,1 +1,3 @@
-<p>suite-img works!</p>
+<div class="container">
+    <img class="img-circle" src="assets/images/{{image}}" width="300px" height="300px"/>
+</div>
