--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,9 @@
 <!--<div class="container">
   <router-outlet></router-outlet>
 </div>-->
-<div class="container">
+<div>
 <app-header></app-header>
 <app-router-simulator></app-router-simulator>
-  <router-outlet></router-outlet>
+<router-outlet></router-outlet>
 </div>
 
