--- a/src/app/cv/cv.component.html
+++ b/src/app/cv/cv.component.html
@@ -1,10 +1,10 @@
  <div class="card-body, container-fluid">
     <div class="row">
       <div class="col">
-        <app-liste (showDetailsL_CV)="showDetails($event)"></app-liste>
+        <app-liste></app-liste>
       </div>
       <div class="col">
-        <app-detail [cv]="selected"></app-detail>
+        <app-detail></app-detail>
       </div>
     </div>
    <div class="row">
