--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,19 +11,19 @@
           <a class="nav-link" [routerLink]="['color']" routerLinkActive="active">Color</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['cv']">CV</a>
+          <a class="nav-link" [routerLink]="['cv']" routerLinkActive="active">CV</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" [routerLink]="['miniWord']">Mini word</a>
+            <a class="nav-link" [routerLink]="['miniWord']" routerLinkActive="active">Mini word</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="['login']">Login</a>
+            <a class="nav-link" [routerLink]="['login']" routerLinkActive="active">Login</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="['addUtil']">Ajouter Utilisateur</a>
+            <a class="nav-link" [routerLink]="['addUtil']" routerLinkActive="active">Ajouter Utilisateur</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="['randImg']"> Random Image</a>
+            <a class="nav-link" [routerLink]="['randImg']" routerLinkActive="active"> Random Image</a>
           </li>
       </ul>
     </div>
